--- a/style.CSS
+++ b/style.CSS
@@ -6,7 +6,7 @@
 }
 
 html {
-    scroll-behavior:smooth;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -23,12 +23,13 @@ body {
     background-image: url('img/user.jpg');
     position: center;
     background-repeat: no-repeat;
-  background-size: cover;
-    
+    background-size: cover;
+
     margin-top: 20px;
-    
+
 }
-.dou{
+
+.dou {
     z-index: -1;
     width: 1370px;
     height: 670px;
@@ -78,11 +79,13 @@ body {
 }
 
 .logo {
-    width: 200px;
+    width: 150px;
+    padding-left: 30px;
+    margin-top: 20px;
 }
 
 .header-text {
-    margin-top: 20%;
+    margin-top: 14%;
     margin-left: 200px;
     font-size: 30px;
 }
@@ -95,6 +98,7 @@ body {
 .header-text span {
     color: #ff004f;
 }
+
 /* h3{
     color: #0c0c0c;
 } */
@@ -203,15 +207,18 @@ body {
     border-radius: 10px;
     transition: background 0.5s, transform 0.5s;
 }
-.w1{
-background-color: orange;
+
+.w1 {
+    background-color: orange;
 }
-.w2{
+
+.w2 {
     background-color: rgb(94, 255, 0);
-    }
-.w3{
+}
+
+.w3 {
     background-color: rgb(0, 204, 255);
-    }
+}
 
 .services-list div i {
     font-size: 50px;
@@ -236,14 +243,16 @@ background-color: orange;
     background: #2f00ff;
     transform: translateY(-10px);
 }
-.w2:hover{
+
+.w2:hover {
     background-color: rgb(255, 0, 170);
     transform: translateY(-10px);
-    }
-    .w3:hover{
-        background-color: yellow;
-        transform: translateY(-10px);
-        }
+}
+
+.w3:hover {
+    background-color: yellow;
+    transform: translateY(-10px);
+}
 
 /* ---------------------------------portfolio---------------------- */
 
@@ -431,17 +440,21 @@ nav .fas {
     #header {
         background-image: url('img/phone-background.png');
     }
+
     .header-text {
         margin-top: 100%;
         font-size: 16px;
     }
+
     .header-text h1 {
         font-size: 30px;
     }
+
     nav .fas {
         display: block;
         font-size: 25px;
     }
+
     nav ul {
         background: #ff004f;
         position: fixed;
@@ -453,34 +466,42 @@ nav .fas {
         z-index: 2;
         transition: right 0.5s;
     }
+
     nav ul li {
         display: block;
         margin: 20px;
     }
+
     nav ul .fas {
         position: absolute;
         left: 25px;
         top: 25px;
         cursor: pointer;
     }
+
     .h-primary {
         font-size: 40px;
     }
+
     .col-1,
     .col-2 {
         flex-basis: 100%;
     }
+
     .col-1 {
         margin-bottom: 30px;
     }
+
     .tab-links {
         font-size: 16px;
         margin-right: 30px;
     }
+
     .contact-left,
     .contact-right {
         flex-basis: 100%;
     }
+
     .copyright {
         font-size: 14px;
     }
